syntax = "proto3";

package ecommerce.notification;

import "common.proto";

option java_package = "com.ecommerce.notificationservice.proto";
option java_outer_classname = "NotificationServiceProtos";

// Notification Service gRPC interface
service NotificationService {
  rpc SendNotification(SendNotificationRequest) returns (SendNotificationResponse);
  rpc SendBulkNotification(SendBulkNotificationRequest) returns (SendBulkNotificationResponse);
  rpc GetNotificationStatus(GetNotificationStatusRequest) returns (GetNotificationStatusResponse);
  rpc GetUserPreferences(GetUserPreferencesRequest) returns (GetUserPreferencesResponse);
}

// Send single notification
message SendNotificationRequest {
  ecommerce.common.TenantContext context = 1;
  int64 user_id = 2;
  string template_id = 3;
  string channel = 4;  // EMAIL, SMS, PUSH
  string priority = 5; // HIGH, MEDIUM, LOW
  map<string, string> template_data = 6;
  string idempotency_key = 7;
}

message SendNotificationResponse {
  bool success = 1;
  string notification_id = 2;
  string error_message = 3;
}

// Send bulk notifications
message SendBulkNotificationRequest {
  ecommerce.common.TenantContext context = 1;
  repeated int64 user_ids = 2;
  string template_id = 3;
  string channel = 4;
  string priority = 5;
  map<string, string> template_data = 6;
}

message SendBulkNotificationResponse {
  bool success = 1;
  int32 sent_count = 2;
  int32 failed_count = 3;
  repeated string failed_user_ids = 4;
  string error_message = 5;
}

// Get notification status
message GetNotificationStatusRequest {
  ecommerce.common.TenantContext context = 1;
  string notification_id = 2;
}

message GetNotificationStatusResponse {
  string notification_id = 1;
  string status = 2;  // PENDING, SENT, DELIVERED, FAILED
  int64 sent_at = 3;
  int64 delivered_at = 4;
  string error_message = 5;
}

// Get user notification preferences
message GetUserPreferencesRequest {
  ecommerce.common.TenantContext context = 1;
  int64 user_id = 2;
}

message GetUserPreferencesResponse {
  int64 user_id = 1;
  bool email_enabled = 2;
  bool sms_enabled = 3;
  bool push_enabled = 4;
  repeated string subscribed_categories = 5;
}